@@ -1,0 +1,5 @@
+﻿reference = new Reference();
+
+reference <- 1;
+
+result = @reference;
